# landing-disparazappp

./: .env.example  .gitignore  DASHBOARD_IMPROVEMENTS.md  DASHBOARD_IMPROVEMENTS_README.md  DASHBOARD_LAYOUT_VISUAL.md  DASHBOARD_TEST_CHECKLIST.md  FILE_STRUCTURE.md  QUICK_START.md  README.md  START_HERE.md  THEME_GUIDE.md  clear-license-cache.js  index.html  kill-and-dev.bat  next.config.ts  package-lock.json  package.json  produto.txt  proxy.ts  tailwind.config.ts  test-license-api.js  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
app/admin/: layout.tsx
app/obrigado/: page.tsx
app/success/: page.tsx
baileys-server/: auto-reply-rules.json  groups-scraper.js  grupo-joiner.js  ia-engine.js  index.js  maps-scraper.js  package-lock.json  package.json  scheduler.js  test-gruposwpp.js  test-validate-pw.js  test-wa-validate.js
lib/: adminApi.ts  adminAuth.ts  resend.ts  stripe.ts
license-manager/: .env.example  .gitignore  README.md  discloud.config  index.js  package-lock.json  package.json
license-manager/prisma/: dev.db  schema.prisma
license-manager/src/: index.ts
scripts/: build-sidecar.cjs  kill-dev.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgendamentoPanel.tsx  AutoResponder.tsx  CloseConfirmDialog.tsx  Dashboard.tsx  DashboardKPIs.tsx  DisparoBlacklist.tsx  DisparoConfig.tsx  DisparoForm.tsx  DisparoPreview.tsx  ExampleThemedComponent.tsx  FeaturedCTACard.tsx  (+20 more)
(+103 files in other folders)
